fix: fixed issues on mobile

--- a/src/sass/components/_benefits.scss
+++ b/src/sass/components/_benefits.scss
@@ -25,28 +25,25 @@
   &__box {
     margin-bottom: 5.5rem;
     margin-right: 5.1rem;
-    // float: left;
     display: flex;
-    flex-wrap: wrap;
+    // flex-wrap: wrap;
     justify-content: flex-start;
     align-items: flex-start;
   }
 
   &__bullet {
     margin-right: 3.1rem;
-    // float: left;
     width: 6.9rem;
-    height: 140%;
+    flex-shrink: 0;
 
     img {
       width: 100%;
     }
 
-    // &:after {
-    //   content: "";
-    //   clear: both;
-    //   display: table;
-    // }
+    @media screen and (max-width: 54rem) {
+      width: 6.3rem;
+      margin-right: 1.3rem;
+    }
   }
 
   &__box-header {
